# rivet

./: .clang-format  .gitignore  .gitmodules  1.0724.0.0-1.0725.0.0.diff  1.0725.0.0-1.0726.0.0.diff  1.0725.0.0-1.0726.0.0_hashes.diff  1.0726.0.0-1.0727.0.0.diff  1.0727.0.0-1.0728.0.0.diff  1.0727.0.0-1.0728.0.0_hashes.diff  1.0728.0.0-1.0808.0.0.diff  1.0728.0.0-1.0808.0.0_hashes.diff  1.0808.0.0-1.0815.0.0.diff  1.0808.0.0-1.0815.0.0_hashes.diff  1.0815.0.0-1.0831.0.0.diff  1.0815.0.0-1.0831.0.0_hashes.diff  1.0831.0.0-1.0922.0.0.diff  1.0831.0.0-1.0922.0.0_hashes.diff  ATTRIBUTION  README.md  TODO.md  fix-llvm-win.py  fix-msvc-win.py  meson.build  meson.options
.github/workflows/: build-rivet.yml
cli/: analyze.cpp  codegen_ddl.cpp  convert_texture.cpp  dump_config.cpp  dump_dat1.cpp  dump_localization.cpp  dump_toc.cpp  extract.cpp  extract_toc.cpp  hash.cpp  helper.hpp  main.cpp  meson.build
cli/codegen/: ddl_dump_schema.hpp  template.hpp
cli/gui/: gui.hpp  main.cpp  meson.build  rivet_sdl_host.h
cli/gui/device/: rivet_sdl_host.cpp  rivet_sdl_host.hpp
cli/gui/mage/: archive.hpp
cli/gui/ui/: archive_viewer.cpp  archive_viewer.hpp  file_browser.cpp  file_browser.hpp  imgui_element.hpp
ddl/: meson.build
ddl/include/rivet/ddl/: rivet_ddl.hpp
ddl/include_base/rivet/ddl/: rivet_ddl.hpp
ddl/src/: rivet_ddl.cpp  rivet_ddl_dummy.cpp  rivet_ddl_registration.cpp
docs/: dat1_hashes_known.txt  ra_streamed_files.txt
docs/ddl/: DUMPING.md
docs/format/: common.txt  dag.txt  dat1.txt  dsar.txt  toc.txt
docs/research/: model_morph.c
include/rivet/: exceptions.hpp  rivet.hpp  rivet_array.hpp  rivet_game.hpp  rivet_hash.hpp  rivet_keywords.hpp  rivet_string_pool.hpp  rivet_vec.hpp
include/rivet/data/: asset_bundle.h  asset_bundle.hpp  config.hpp  dag.hpp  dat1.hpp  data_file.hpp  dsar.hpp  localization.hpp  registry.hpp  toc.hpp
include/rivet/data/sections/: data_section.hpp
include/rivet/ddl/: serialization.hpp
include/rivet/gfx/: model.hpp  texture.hpp
include/rivet/gfx/support/: dxgi.hpp
include/rivet/hash/: asset_id.hpp  type_id.hpp  type_id_registry.hpp
include/rivet/serialization/: serialization.hpp
include/rivet/structures/: rivet_archive.hpp  rivet_asset.hpp  rivet_localization.hpp  rivet_print_helper.hpp  rivet_ref.hpp  rivet_serialization.hpp  rivet_serialization_type.hpp
include/rivet/structures/gfx/: rivet_model.hpp  rivet_model_vert.hpp
include/rivet/support/: dxgi.hpp
rivet_hook/: dll_main.cpp  hid.def  meson.build  trampoline.asm  trampoline.masm  trampoline.nasm  x86_64-w64-mingw32.txt
rivet_hook/runtime/: ddl.hpp  runtime.cpp  runtime.hpp  settings.hpp  signature.hpp  signature_engine.hpp
src/: gltf_helper.hpp  meson.build  rivet.cpp  rivet_game.cpp  rivet_string_pool.cpp
src/data/: asset_bundle.cpp  config.cpp  dag.cpp  dat1.cpp  dsar.cpp  localization.cpp  registry.cpp  toc.cpp
src/ddl/: serialization.cpp
src/gfx/: model.cpp  texture.cpp
src/serialization/: serialization.cpp
src/structures/: rivet_serialization.cpp
subprojects/: clipp.wrap  compressonator.wrap  fx-gltf.wrap  imgui.wrap  imguizmo.wrap  libgdeflate.wrap  minhook.wrap  sdl3.wrap  snitch.wrap  unordered_dense.wrap
subprojects/GDeflate/: SOURCES  changes.patch  meson.build
subprojects/GDeflate/include/: GDeflate.h
subprojects/GDeflate/src/: GDeflateCompress.cpp  GDeflateDecompress.cpp  TileStream.h
subprojects/packagefiles/clipp/: meson.build
subprojects/packagefiles/compressonator/: meson.build
subprojects/packagefiles/diffs/: compressonator-0001.patch  libgdeflate-0001.patch  unordered_dense-0001.patch
subprojects/packagefiles/fx-gltf/: meson.build
subprojects/packagefiles/imgui/: meson.build  meson_options.txt
subprojects/packagefiles/imguizmo/: meson.build
subprojects/packagefiles/libgdeflate/: libgdeflate.h  meson.build
subprojects/packagefiles/minhook/: meson.build
test/: meson.build  rivet_data_section_test.cpp  rivet_data_type_test.cpp  rivet_version_test.cpp
