option('rivet_tests', type: 'boolean', value: false, description: 'build and run tests')
option('rivet_lib_only', type: 'boolean', value: false, description: 'only build librivet')
option('rivet_hook_only', type: 'boolean', value: false, description: 'only build rivet_hook')
option('rivet_no_ddl', type: 'boolean', value: false, description: 'skip rivet_ddl')
option('rivet_no_gui', type: 'boolean', value: false, description: 'skip building rivet gui')
option('rivet_no_cli', type: 'boolean', value: false, description: 'skip building rivet cli utils')
