executable('rivet-extract', ['extract.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-dat1-dump', ['dump_dat1.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-localization-dump', ['dump_localization.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-config-dump', ['dump_config.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-texture-convert', ['convert_texture.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-debug-analyze', ['analyze.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)
