executable('rivet-toc-extract', icon_sources + ['extract_toc.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-toc-dump', icon_sources + ['dump_toc.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-dat1-dump', icon_sources + ['dump_dat1.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-localization-dump', icon_sources + ['dump_localization.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-config-dump', icon_sources + ['dump_config.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-texture-convert', icon_sources + ['convert_texture.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-debug-analyze', icon_sources + ['analyze.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-debug-hash', icon_sources + ['hash.cpp'],
	dependencies: cli_deps + libdeps,
	install: true)

executable('rivet-codegen-ddl', icon_sources + ['codegen_ddl.cpp'],
	dependencies: cli_deps,
	include_directories: ['../include'],
	install: true)

# executable('rivet', icon_sources + ['gui/gui.cpp'],
# 	dependencies: cli_deps + gui_deps + libdeps,
#	instlal: true)
